Fix spacing in .section-cta

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ blockquote {
 
 .section-cta {
     margin: 0;
-    padding: 100px 200px;
+    padding: 80px 200px;
 }
 .section-cta .container {
     display: flex;
